<resources>
    <string name="app_name">GoodLuckShoes</string>
    <string name="create_date">তৈরীর তারিখ</string>
    <string name="income_date">আয়ের তারিখ</string>
    <string name="expense_date">ব্যয়ের তারিখ</string>
    <string name="edition">সম্পাদন</string>
    <string name="today_accounts">আজকের হিসাব</string>
    <string name="radhika">রাধিকা</string>
    <string name="johorlal">জহরলাল</string>
    <string name="nitai">নিতাই</string>
    <string name="asit">অসিত</string>
    <string name="change_data">তথ্য পরিবর্তন করুন</string>
    <string name="enter_amount">টাকার অংক লিখুন</string>
    <string name="update_done">তথ্য আপডেট হয়েছে</string>
    <string name="enter_expense_date">ব্যয়ের তারিখ দিন</string>
    <string name="data_saved">তথ্য সেভ হয়েছে</string>
    <string name="storage_permission">স্টোরেজ পারমিশন দিতে হবে</string>
    <string name="backup_done">ডাটা ব্যাকআপ হয়েছে</string>
</resources>