<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:id="@+id/mainHSV"
    android:layout_height="match_parent"
    tools:context=".ViewAllActivity">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/headerDateTr"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/bgColor"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/incomeDateLabelTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/create_date"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createDateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/incomeDateLabelTv"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/pdfBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:src="@drawable/baseline_picture_as_pdf_24"
                android:textSize="16sp"
                android:textStyle="bold"
                app:tint="@color/white" />
        </RelativeLayout>

        <TableRow
            android:id="@+id/headerTr"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerDateTr"
            android:background="@color/bgColor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/expense_date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/radhika"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/johorlal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/nitai"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/asit"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/edition"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/totalTr"
            android:layout_below="@id/headerTr"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_item_day" />

        <TableRow
            android:gravity="center_vertical"
            android:id="@+id/totalTr"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/totalTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Name1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Name2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Name3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Name4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="3dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                app:tint="@color/bgColor" />
        </TableRow>

    </RelativeLayout>
</HorizontalScrollView>