<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="3dp"
            android:text="@string/expense_date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_et"
            android:focusable="false"
            android:gravity="center"
            android:hint="DD-MM-YY"
            android:inputType="none"
            android:padding="5dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/baseline_date_range_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="3dp"
            android:text="@string/radhika"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="3dp"
            android:text="@string/johorlal"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="3dp"
            android:text="@string/nitai"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="3dp"
            android:text="@string/asit"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="Save"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
